--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -6,7 +6,12 @@
     <head>
     </head>
     <body>
+        
         <section layout:fragment="content">
+            <a href="addDisc.html" th:href="@{/addDisc}">
+                <button>Disc hinzufügen</button>
+            </a>
+   
             <table class="ui celled table">
                 <thead>
                 <tr>
